# Content-Automation-Agent

./: .gitignore  README.md  cloudfront-config.json  pyproject.toml  script.json  script.md
content_ai_agent/: .dockerignore  .env.example  .gitignore  Dockerfile  INSTAGRAM_API_SETUP.md  QUICK_START_INSTAGRAM.md  docker-compose.yml  ecs-task-definition.json  fix-aws-secrets.sh  pyproject.toml  requirements.txt  script.json  script.md  secrets-policy.json
content_ai_agent/src/content_ai_agent/: crew.py  main.py  script.json
content_ai_agent/src/content_ai_agent/api/: main.py
content_ai_agent/src/content_ai_agent/api/routes/: agent_routes.py  analytics_routes.py  instagram_routes.py
content_ai_agent/src/content_ai_agent/config/: agents.yaml  tasks.yaml
content_ai_agent/src/content_ai_agent/crews/: __init__.py  competitor_crew.py  content_researcher_crew.py  prediction_crew.py  script_writer_crew.py  seo_optimizer_crew.py  smart_script_crew.py  trend_analyzer_crew.py
content_ai_agent/src/content_ai_agent/models/: __init__.py  output_models.py
content_ai_agent/src/content_ai_agent/services/: data_collector.py  instagram_service.py
content_ai_agent/src/content_ai_agent/tools/: __init__.py  ai_news_aggregator.py  competitor_analyzer.py  engagement_analyzer.py  google_trends.py  hashtag_generator.py  posting_optimizer.py  reddit_api.py  twitter_api.py
src/content_ai_agent/: crew.py  script.json
src/content_ai_agent/api/: main.py
src/content_ai_agent/config/: agents.yaml  tasks.yaml
src/content_ai_agent/crews/: __init__.py  full_crew.py  (+2 more)
(+5 files in other folders)
