[project]
name = "content_ai_agent"
version = "0.1.0"
description = "content-ai-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.0"
]

[project.scripts]
content_ai_agent = "content_ai_agent.main:run"
run_crew = "content_ai_agent.main:run"
train = "content_ai_agent.main:train"
replay = "content_ai_agent.main:replay"
test = "content_ai_agent.main:test"
run_with_trigger = "content_ai_agent.main:run_with_trigger"

[tool.hatch.build.targets.wheel]
packages = ["src/content_ai_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
